# canvas-wasm

./: .eslintrc.json  .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json
components/Appbar/: Appbar.tsx
components/Appbar/utilities/: Appbar.props.ts
components/Canvas/: Canvas.tsx
components/common/layouts/CoreLayout/: CoreLayout.tsx  CoreLayout.types.ts
components/common/layouts/CoreLayout/AppBar/: AppBar.tsx
components/common/layouts/Head/: Head.tsx  Head.types.ts
components/games/Snake/: Snake.tsx
components/games/Tanner/: Tanner.tsx  Tanner.utils.ts  index.ts
components/games/Tanner/Crate/: Crate.tsx  index.ts
components/games/Tanner/MeshLoader/: MeshLoader.tsx  index.ts
components/games/Tanner/MeshLoader/programs/mesh/: index.ts  mesh.ts  mesh.utils.ts
components/games/Tanner/programs/cube/: cube.ts
components/games/Tanner/programs/cube/shaders/: vertex.vert
components/games/Tanner/programs/triangle/: triangle.ts
components/games/Tanner/programs/triangle/shaders/: fragment.frag
constants/: games.ts  routes.ts
hooks/: useWasm.ts
pages/: _app.tsx  checkers.tsx  chess.tsx  index.tsx  snake.tsx  tanner-crate.tsx  tanner-mesh.tsx  tanner.tsx
rust/: Cargo.toml
rust/pkg/: package.json  rust.d.ts  rust_bg.js  rust_bg.wasm  rust_bg.wasm.d.ts
rust/src/: lib.rs  snake.rs
rust/src/carter/: mod.rs
rust/src/carter/dom/: mod.rs
rust/src/carter/logger/: mod.rs
rust/src/carter/lowlevel/: mod.rs
rust/src/carter/types/: mod.rs
rust/src/checkers/: mod.rs
rust/src/snake/: mod.rs  state.rs
rust/src/snake/events/: listeners.rs
rust/src/snake/game_state/: mod.rs
rust/src/snake/init/: error.rs  mod.rs  program.rs
rust/src/snake/renderer/: mod.rs
rust/src/snake/state/: mod.rs
rust/src/snake/utils/: keys.rs  logger.rs  mod.rs
rust/src/tanner/: gl_setup.rs  mod.rs
rust/src/tanner/programs/: color_2d.rs  mod.rs
rust/src/tanner/programs/indigo_code/: mod.rs
rust/src/tanner/programs/indigo_code/shaders/: mod.rs  vertex.vert
rust/src/tanner/shaders/fragment/: color_2d.frag  color_2d.rs  mod.rs
rust/src/tanner/shaders/programs/: color_2d.rs
rust/src/tanner/shaders/vertex/: color_2d.rs  color_2d.vert  mod.rs
rust/src/tanner/utils/: mod.rs
types/: GAME.enum.ts
utils/chess/: chess.func.ts
utils/dom/: removeChildren.func.ts
utils/snake/: snake.func.ts
(+3 files in other folders)
